--- a/css/style.css
+++ b/css/style.css
@@ -279,38 +279,34 @@ select[name=state] {
 }
 
 
-.suppliers {
-    display: inline-block;
-    width: 100%;
-	margin-left:auto;
-	margin-right:auto;
+.row {
+	margin-top:5%;
 }
 
-.boxrow {
-	width: 230px;
-    height: 210px;
-    padding: 25px 15px 15px 25px;
+.col-xs-6.col-md-3 {
     border: 2px solid #d1d1d1;
-    display: inline-block;
-    margin-top: 2%;
     margin-right: 10px;
-    margin-bottom: 2%;
-	min-width:200px;
+    width: 230px;
+    height: 210px;
+    margin-bottom: 15px;
 }
 
-.boxrow#initial {
+.col-xs-6.col-md-3#initial {
 	background: #5dc7cb;	
 }
 
-.boxrow#initial h3 {
+.col-xs-6.col-md-3#initial h4 {
 	vertical-align: middle;
 	color:#fff;	
+	font-size:24px;
+	padding-top: 35%;
 }
 
-.boxrow h4 {
+.row h4 {
 	color:#ec008b;
 	font-size:13px;
-	fon-weight:500;
+	font-weight:500;
+	padding-top:15px;
 }
 
 p.more {
