--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,16 @@ ul#home_content_list {
     padding-left: 0;
 }
 
+.nav-tabs.nav-justified>.active>a, .nav-tabs.nav-justified>.active>a:focus, .nav-tabs.nav-justified>.active>a:hover {
+    border-bottom-color: #fff;
+	background: #ec008b;
+	color: #fff;
+}
+
 .nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
     color: #fff;
     cursor: default;
-    background-color: #ec008b;!important
+    background: #ec008b;!important
     border: 0px solid #ddd;!important
     border-bottom-color: transparent;
 }
@@ -54,16 +60,20 @@ ul#home_content_list {
 	color:#fff;
 }
 
-.nav-tabs.nav-justified>li a:hover {
-	background-color:#ec008b;
-	border-radius:0;
+.nav-tabs>li.active>a {
+	color: #fff;!important
+    cursor: default;
+   	background:#ec008b;!important
+    border: 0px solid #ddd;
+    border-bottom-color: transparent;
 }
 
-.nav-tabs.nav-justified>li.active {
-	background-color:#ec008b;
+.nav-tabs.nav-justified>li a:hover,
+.nav-tabs.nav-justified>li a:active,
+.nav-tabs.nav-justified>li a:focus {
+	background:#ec008b;
 	border-radius:0;
 }
-
 
 
 /*---------JUMBOTRON----------*/
