--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,8 @@ ul#home_content_list {
     border-bottom-color: #fff;
 	background: #ec008b;
 	color: #fff;
+	margin-bottom: 0;
+    border-radius: 0;
 }
 
 .nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
@@ -39,11 +41,14 @@ ul#home_content_list {
     background: #ec008b;!important
     border: 0px solid #ddd;!important
     border-bottom-color: transparent;
+	margin-bottom: 0;
+    border-radius: 0;
 }
 
 .nav-tabs.nav-justified>li>a {
     border-bottom: 0px solid #ddd;
     border-radius: 0;
+	margin-bottom:0;
 }
 
 .nav-tabs li {
@@ -73,6 +78,7 @@ ul#home_content_list {
 .nav-tabs.nav-justified>li a:focus {
 	background:#ec008b;
 	border-radius:0;
+	margin-bottom: 0;
 }
 
 
@@ -130,7 +136,7 @@ select[name=insurance] {
     border: 1px solid #fff;
     background: rgba(255, 255, 255, 0.36);
     position: absolute;
-    margin-top: -13%;
+    margin-top: -11%;
     margin-left: 5%;
 	color:#fff;
 }
@@ -145,7 +151,7 @@ select[name=state] {
     border: 1px solid #fff;
     background: rgba(255, 255, 255, 0.36);
     position: absolute;
-    margin-top: -10.5%;
+    margin-top: -7.5%;
     margin-left: 5%;
 	color:#fff;
 }
@@ -334,9 +340,51 @@ button.jumbo {
     margin-top: -13%;
     margin-left: 5%;
     padding: 10px;
-    width: 7%;
+    min-width: 8%;
     background: #ec008b;
     border: none;
     color: #fff;
 	text-transform:uppercase;
 }
+
+@media only screen and (max-width:1335px) {
+	
+button.jumbo {
+	margin-top:-9%;	
+}
+	
+}
+
+@media (max-width: 1240px) {
+
+.nav-tabs.nav-justified>li>a {
+    border-bottom: 0px solid #ddd;
+    border-radius: 4px 4px 0 0;
+    font-size: 12px;
+}
+}
+
+@media (max-width: 1240px) {
+
+.nav-tabs.nav-justified>li>a {
+    font-size: 11px;
+	font-weight:500;
+}
+}
+
+@media (max-width: 1064px) {
+
+.nav-tabs.nav-justified>li>a {
+    font-size: 10px;
+	font-weight:500;
+}
+}
+
+@media (max-width: 994px) {
+
+.nav-tabs.nav-justified>li>a {
+    font-size: 9px;
+	font-weight:500;
+}
+}
+
