--- a/css/style.css
+++ b/css/style.css
@@ -380,6 +380,7 @@ div#learnmore p {
     width: 230px;
     height: 210px;
     margin-bottom: 15px;
+	margin-bottom: 10%;
 }
 
 .col-xs-6.col-md-3#initial {
